@startuml

title __SERVER's Class Diagram__\n

  namespace clientserver.server {
    class clientserver.server.EchoServerThread {
        ~ code : String
        ~ echo : String
        {static} ~ endMessage : String
        ~ filename : File
        ~ messageArray : ArrayList
        ~ password : String
        ~ uploadMessage : String
        ~ username : String
        + run()
        ~ EchoServerThread()
    }
  }
  

  namespace clientserver.server {
    class clientserver.server.Server {
        {static} + main()
        {static} - printServerSocketInfo()
        {static} - printSocketInfo()
    }
  }
  

  namespace clientserver.server {
    class clientserver.server.ServerStreamSocket {
        - input : BufferedReader
        - output : PrintWriter
        - socket : Socket
        + close()
        + receiveMessage()
        + sendMessage()
        ~ ServerStreamSocket()
        ~ ServerStreamSocket()
        - setStreams()
    }
  }
  

  clientserver.server.EchoServerThread .up.|> java.lang.Runnable
  clientserver.server.EchoServerThread o-- clientserver.server.ServerStreamSocket : myDataSocket
  clientserver.server.ServerStreamSocket -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
